fixed header, footer, nav bar alignment, created mailchimp mailing list section.

--- a/src/scss/components/_join.scss
+++ b/src/scss/components/_join.scss
@@ -1,5 +1,5 @@
 .join {
-    background: $tesc-light-blue;
+    background: white;
 
     &__container {
         width: 80%;
@@ -7,7 +7,7 @@
         margin-left: 10%;
         height: 80%;
         border-radius: 2.5rem;
-        color: white;
+        color: $tesc-light-blue;
         font-size: 1.3rem;
     }
 
@@ -17,7 +17,7 @@
 
     &__header {
         font-size: 2.5rem;
-        color: white;
+        color: $tesc-light-blue;
         font-weight: bold;
     }
 
@@ -27,9 +27,9 @@
 
     &__cta {
         font-size: 1.5rem;
-        border: 2px solid white;
+        border: 2px solid $tesc-light-blue;
         margin-top: 0.5rem;
-        color: white;
+        color: $tesc-light-blue;
 
         &:hover {
             background: white;
