--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -47,6 +47,6 @@
     }
   
     &__item {
-      margin: 0 0.5rem;
+      margin: 0.1rem;
     }
   }
